# [[file:gchemol-geometry.note::*cargo][cargo:1]]
[package]
name = "gchemol-geometry"
version = "0.0.40"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "gchemol: a Graph-based CHEMical Objects Library"
homepage = "https://github.com/gchemol/gchemol-geometry"
repository = "https://github.com/gchemol/gchemol-geometry"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
rand = "0.7"
rand_distr = "0.2"
vecfx = { version = "0.1.2", features = ["nalgebra"] }
gchemol-gut = "0.1.3"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
gchemol = "0.0.42"

[features]
adhoc = [] # for adhoc hacking
# cargo:1 ends here
